--- a/.github/workflows/rust-clippy.yml
+++ b/.github/workflows/rust-clippy.yml
@@ -31,7 +31,7 @@ jobs:
         uses: actions/checkout@v2
       
       - name: install alsa
-        run: apt install alsa-lib-devel
+        run: sudo apt install alsa-lib-devel
 
       - name: Install Rust toolchain
         uses: actions-rs/toolchain@16499b5e05bf2e26879000db0c1d13f7e13fa3af #@v1
