--- a/.github/workflows/rust-clippy.yml
+++ b/.github/workflows/rust-clippy.yml
@@ -30,11 +30,9 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
       
-      - name: install alsa
+      - name: installing missing libs
         run: sudo apt-get install libasound2-dev
-      
-      - name: install alsa2
-        run: sudo apt-get install libudev-dev
+             sudo apt-get install libudev-dev
 
       - name: Install Rust toolchain
         uses: actions-rs/toolchain@16499b5e05bf2e26879000db0c1d13f7e13fa3af #@v1
