--- a/.github/workflows/rust-clippy.yml
+++ b/.github/workflows/rust-clippy.yml
@@ -31,8 +31,7 @@ jobs:
         uses: actions/checkout@v2
       
       - name: installing missing libs
-        run: sudo apt-get install libasound2-dev
-             sudo apt-get install libudev-dev
+        run: sudo apt-get install libasound2-dev libudev-dev
 
       - name: Install Rust toolchain
         uses: actions-rs/toolchain@16499b5e05bf2e26879000db0c1d13f7e13fa3af #@v1
